--- a/app/index.html
+++ b/app/index.html
@@ -32,15 +32,17 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">laoshiList</a>
+            <a class="navbar-brand" href="#/">
+              <img src="/images/white-logo-cropped.png" alt="Laoshi List">
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/jobs">Jobs</a></li>
+              <li><a ng-href="#/teachers">Teachers</a></li>
             </ul>
           </div>
         </div>
@@ -53,7 +55,9 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <span>Connecting teachers with students in China since 2013</span> |
+        <span>info@laoshilist.com</span> |
+        <span>josh_qiaoshi</span>
       </div>
     </div>
 
@@ -89,6 +93,13 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/jobs.js"></script>
+        <script src="scripts/services/firebasePath.js"></script>
+        <script src="scripts/controllers/jobedit.js"></script>
+        <script src="scripts/services/subjects.js"></script>
+        <script src="scripts/services/jobstatus.js"></script>
+        <script src="scripts/controllers/users.js"></script>
+        <script src="scripts/services/ages.js"></script>
         <!-- endbuild -->
 </body>
 </html>
