--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -100,6 +101,11 @@
         <script src="scripts/services/jobstatus.js"></script>
         <script src="scripts/controllers/users.js"></script>
         <script src="scripts/services/ages.js"></script>
+        <script src="scripts/services/cities.js"></script>
+        <script src="scripts/directives/ll-job.js"></script>
+        <script src="scripts/directives/llpublicjob.js"></script>
+        <script src="scripts/directives/lljobapplicants.js"></script>
+        <script src="scripts/directives/llprivatejob.js"></script>
         <!-- endbuild -->
 </body>
 </html>
