--- a/app/index.html
+++ b/app/index.html
@@ -55,9 +55,9 @@
 
     <div class="footer">
       <div class="container">
-        <span>Connecting teachers with students in China since 2013</span> |
+        <span>Connecting teachers with students in China since 2014</span> |
         <span>info@laoshilist.com</span> |
-        <span>josh_qiaoshi</span>
+        <span>187-0153-1534</span>
       </div>
     </div>
 
@@ -106,6 +106,7 @@
         <script src="scripts/directives/llpublicjob.js"></script>
         <script src="scripts/directives/lljobapplicants.js"></script>
         <script src="scripts/directives/llprivatejob.js"></script>
+        <script src="scripts/filters/capitalizefirst.js"></script>
         <!-- endbuild -->
 </body>
 </html>
