--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,9 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/jobs">Jobs</a></li>
               <li><a ng-href="#/teachers">Teachers</a></li>
+              <li><a ng-href="#/users">Users</a></li>
+              <li><a ng-href="#/login">Login</a></li>
+              <li><a ng-href="#/register">Register</a></li>
             </ul>
           </div>
         </div>
@@ -107,6 +110,8 @@
         <script src="scripts/directives/lljobapplicants.js"></script>
         <script src="scripts/directives/llprivatejob.js"></script>
         <script src="scripts/filters/capitalizefirst.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <!-- endbuild -->
 </body>
 </html>
