--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
               <li><a ng-href="#/users">Users</a></li>
               <li><a ng-href="#/login">Login</a></li>
               <li><a ng-href="#/register">Register</a></li>
+              <li><a ng-href="#/profile">Profile</a></li>
             </ul>
           </div>
         </div>
@@ -106,12 +107,12 @@
         <script src="scripts/services/ages.js"></script>
         <script src="scripts/services/cities.js"></script>
         <script src="scripts/directives/ll-job.js"></script>
-        <script src="scripts/directives/llpublicjob.js"></script>
         <script src="scripts/directives/lljobapplicants.js"></script>
-        <script src="scripts/directives/llprivatejob.js"></script>
         <script src="scripts/filters/capitalizefirst.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
+        <script src="scripts/services/username.js"></script>
         <!-- endbuild -->
 </body>
 </html>
