--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/profile.js"></script>
         <script src="scripts/services/username.js"></script>
+        <script src="scripts/services/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
