--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,9 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/jobs">Jobs</a></li>
-              <li><a ng-href="#/teachers">Teachers</a></li>
               <li><a ng-href="#/users">Users</a></li>
               <li><a ng-href="#/login">Login</a></li>
               <li><a ng-href="#/register">Register</a></li>
-              <li><a ng-href="#/profile">Profile</a></li>
             </ul>
           </div>
         </div>
@@ -91,6 +89,7 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/spin-js/spin.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -113,6 +112,11 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/profile.js"></script>
         <script src="scripts/services/username.js"></script>
+        <script src="scripts/controllers/profile_edit.js"></script>
+        <script src="scripts/services/countries.js"></script>
+        <script src="scripts/services/ethnicities.js"></script>
+        <script src="scripts/directives/fbimageupload.js"></script>
+        <script src="scripts/directives/fbsrc.js"></script>
         <!-- endbuild -->
 </body>
 </html>
