--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,8 @@
         <script src="scripts/services/ethnicities.js"></script>
         <script src="scripts/directives/fbimageupload.js"></script>
         <script src="scripts/directives/fbsrc.js"></script>
+        <script src="scripts/services/degrees.js"></script>
+        <script src="scripts/services/colleges.js"></script>
         <!-- endbuild -->
 </body>
 </html>
