--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
         <script src="scripts/directives/fbsrc.js"></script>
         <script src="scripts/services/degrees.js"></script>
         <script src="scripts/services/colleges.js"></script>
+        <script src="scripts/services/majors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
