--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
         <script src="scripts/services/degrees.js"></script>
         <script src="scripts/services/colleges.js"></script>
         <script src="scripts/services/majors.js"></script>
+        <script src="scripts/services/language_level.js"></script>
         <!-- endbuild -->
 </body>
 </html>
