more, and contact info directive

--- a/app/index.html
+++ b/app/index.html
@@ -89,9 +89,13 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/spin-js/spin.js"></script>
+    <script src="bower_components/angular-ui-utils/event.js"></script>
+    <script src="bower_components/angular-ui-map-baidu/ui-map.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <!--script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4&ak=M8aTWVG5wGFFVeHWTAHcVOOw"></script-->
+
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -121,6 +125,8 @@
         <script src="scripts/services/colleges.js"></script>
         <script src="scripts/services/majors.js"></script>
         <script src="scripts/services/language_level.js"></script>
+        <script src="scripts/services/baidu_maps_key.js"></script>
+        <script src="scripts/directives/contactinfo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
