more, and bank directive

--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,9 @@
         <script src="scripts/services/language_level.js"></script>
         <script src="scripts/services/baidu_maps_key.js"></script>
         <script src="scripts/directives/contactinfo.js"></script>
+        <script src="scripts/services/roles.js"></script>
+        <script src="scripts/directives/bankinfo.js"></script>
+        <script src="scripts/services/fbmethods.js"></script>
         <!-- endbuild -->
 </body>
 </html>
