subjects on jobs page

--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,7 @@
         <script src="scripts/services/roles.js"></script>
         <script src="scripts/directives/bankinfo.js"></script>
         <script src="scripts/services/fbmethods.js"></script>
+        <script src="scripts/directives/profilebox.js"></script>
         <!-- endbuild -->
 </body>
 </html>
