--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
       </div>
     </div>
 
-    <div class="container">
-    <div ng-view=""></div>
+    <div class="container" style="height:100%">
+    <div ng-view="" style="height:100%"></div>
     </div>
 
     <div class="footer">
