--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,7 @@
         <script src="scripts/directives/bankinfo.js"></script>
         <script src="scripts/services/fbmethods.js"></script>
         <script src="scripts/directives/profilebox.js"></script>
+        <script src="scripts/services/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
