--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="container" style="height:100%">
+    <div class="container">
     <div ng-view="" style="height:100%"></div>
     </div>
 
