--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+     <!--script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
@@ -73,7 +73,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -131,6 +131,7 @@
         <script src="scripts/services/fbmethods.js"></script>
         <script src="scripts/directives/profilebox.js"></script>
         <script src="scripts/services/user.js"></script>
+        <script src="scripts/filters/jobsfilter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
