--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/jobview.js"></script>
+        <script src="scripts/directives/notes.js"></script>
         <!-- endbuild -->
 </body>
 </html>
