--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,8 @@
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/jobview.js"></script>
         <script src="scripts/directives/notes.js"></script>
+        <script src="scripts/directives/lldelete.js"></script>
+        <script src="scripts/controllers/delete.js"></script>
         <!-- endbuild -->
 </body>
 </html>
