--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
         <script src="scripts/controllers/delete.js"></script>
         <script src="scripts/controllers/books.js"></script>
         <script src="scripts/controllers/booksedit.js"></script>
+        <script src="scripts/directives/jobsassoc.js"></script>
         <!-- endbuild -->
 </body>
 </html>
