--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,10 @@
               <li ng-if="authUser" ng-cloak><a ng-href="#/jobs">Jobs</a></li>
               <li ng-if="authUser" ng-cloak><a ng-href="#/users">Users</a></li>
               <li ng-if="!authUser" ng-cloak><a ng-href="#/login">Login</a></li>
-              <li ng-if="authUser" ng-cloak><a ng-href="#/books">Payments</a></li>
-              <!--li ng-if="!authUser" ng-cloak><a ng-href="#/register">Register</a></li-->
+              <li ng-if="authUser" ng-cloak><a ng-href="#/payments">Payments</a></li>
+              <li ng-if="!authUser" ng-cloak><a ng-href="#/register">Register</a></li>
               <li ng-if="authUser" ng-cloak><a ng-click="auth.$unauth()">Logout</a></li>
+              <li ng-if="authUser" ng-cloak></li>
             </ul>
           </div>
         </div>
@@ -139,9 +140,10 @@
         <script src="scripts/directives/notes.js"></script>
         <script src="scripts/directives/lldelete.js"></script>
         <script src="scripts/controllers/delete.js"></script>
-        <script src="scripts/controllers/books.js"></script>
-        <script src="scripts/controllers/booksedit.js"></script>
+        <script src="scripts/controllers/payments.js"></script>
+        <script src="scripts/controllers/paymentsedit.js"></script>
         <script src="scripts/directives/jobsassoc.js"></script>
+        <script src="scripts/directives/apply.js"></script>
         <!-- endbuild -->
 </body>
 </html>
