--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,9 @@
         <script src="scripts/controllers/paymentsedit.js"></script>
         <script src="scripts/directives/jobsassoc.js"></script>
         <script src="scripts/directives/apply.js"></script>
+        <script src="scripts/services/users.js"></script>
+        <script src="scripts/directives/visit.js"></script>
+        <script src="scripts/services/job.js"></script>
         <!-- endbuild -->
 </body>
 </html>
