refactor batch delete

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
         <script src="scripts/services/users.js"></script>
         <script src="scripts/directives/visit.js"></script>
         <script src="scripts/services/job.js"></script>
+        <script src="scripts/directives/batchdelete.js"></script>
         <!-- endbuild -->
 </body>
 </html>
