--- a/app/index.html
+++ b/app/index.html
@@ -148,6 +148,7 @@
         <script src="scripts/directives/visit.js"></script>
         <script src="scripts/services/job.js"></script>
         <script src="scripts/directives/batchdelete.js"></script>
+        <script src="scripts/services/mandrill.js"></script>
         <!-- endbuild -->
 </body>
 </html>
