--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,7 @@
         <script src="scripts/services/job.js"></script>
         <script src="scripts/directives/batchdelete.js"></script>
         <script src="scripts/services/mandrill.js"></script>
+        <script src="scripts/services/laoshi-list-api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
