--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,12 @@
         <script src="scripts/directives/batchdelete.js"></script>
         <script src="scripts/services/mandrill.js"></script>
         <script src="scripts/services/laoshi-list-api.js"></script>
+        <script src="scripts/services/user_.js"></script>
+        <script src="scripts/services/job_.js"></script>
+        <script src="scripts/services/jobs.js"></script>
+        <script src="scripts/services/ll-constants.js"></script>
+        <script src="scripts/controllers/job-edit.js"></script>
+        <script src="scripts/directives/jobsnapshot.js"></script>
         <!-- endbuild -->
 </body>
 </html>
