--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
         <script src="scripts/controllers/job-edit.js"></script>
         <script src="scripts/directives/jobsnapshot.js"></script>
         <script src="scripts/directives/applybox.js"></script>
+        <script src="scripts/services/users_.js"></script>
         <!-- endbuild -->
 </body>
 </html>
