--- a/app/index.html
+++ b/app/index.html
@@ -46,14 +46,14 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li ng-cloak><a ng-href="#/jobs">Jobs</a></li>
-              <li ng-if="authUser" ng-cloak><a ng-href="#/users">Users</a></li>
-              <li ng-if="!authUser" ng-cloak><a ng-href="#/login">Login</a></li>
-              <li ng-if="authUser" ng-cloak><a ng-href="#/payments">Payments</a></li>
-              <li ng-if="authUser" ng-cloak><a ng-href="#/profile/{{authUser}}">Profile</a></li>
-              <li ng-if="!authUser" ng-cloak><a ng-href="#/register">Register</a></li>
-              <li ng-if="authUser" ng-cloak><a class="btn-link logoutBtn" ng-click="logout()">Logout</a></li>
+              <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
+              <li ng-cloak ng-class="{ active: isActive('/jobs')}"><a ng-href="#/jobs">Jobs</a></li>
+              <li ng-if="authUser" ng-cloak ng-class="{ active: isActive('/users')}"><a ng-href="#/users">Users</a></li>
+              <li ng-if="!authUser" ng-cloak ng-class="{ active: isActive('/login')}"><a ng-href="#/login">Login</a></li>
+              <li ng-if="authUser" ng-cloak ng-class="{ active: isActive('/payments')}"><a ng-href="#/payments">Payments</a></li>
+              <li ng-if="authUser" ng-cloak ng-class="{ active: isActive('/profile/{{authUser}}')}"><a ng-href="#/profile/{{authUser}}">My Profile</a></li>
+              <li ng-if="!authUser" ng-cloak ng-class="{ active: isActive('/register')}"><a ng-href="#/register">Register</a></li>
+              <li ng-if="authUser" ng-cloak ng-class="{ active: isActive('/logout')}"><a class="btn-link logoutBtn" ng-click="logout()">Logout</a></li>
             </ul>
           </div>
         </div>
