--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,10 @@
     </div>
 
     <div class="container">
-    <div ng-view="" style="height:100%"></div>
-    </div>
+<!--     <div ng-view="" style="height:100%"></div>
+ -->    
+    <div ng-view=""></div>
+  </div>
 
     <div class="footer">
       <div class="container">
