--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@
         <script src="scripts/directives/applybox.js"></script>
         <script src="scripts/services/users_.js"></script>
         <script src="scripts/services/apply.js"></script>
+        <script src="scripts/services/jobs_.js"></script>
         <!-- endbuild -->
 </body>
 </html>
