--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,7 @@
         <script src="scripts/services/users_.js"></script>
         <script src="scripts/services/apply.js"></script>
         <script src="scripts/services/jobs_.js"></script>
+        <script src="scripts/services/batchfunctions.js"></script>
         <!-- endbuild -->
 </body>
 </html>
