--- a/app/index.html
+++ b/app/index.html
@@ -173,6 +173,7 @@
         <script src="scripts/services/apply.js"></script>
         <script src="scripts/services/jobs_.js"></script>
         <script src="scripts/services/batchfunctions.js"></script>
+        <script src="scripts/directives/sharejob.js"></script>
         <!-- endbuild -->
 </body>
 </html>
