--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,7 @@
         <script src="scripts/services/jobs_.js"></script>
         <script src="scripts/services/batchfunctions.js"></script>
         <script src="scripts/directives/sharejob.js"></script>
+        <script src="scripts/services/payment.js"></script>
         <!-- endbuild -->
 </body>
 </html>
