--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
-              <li ng-cloak ng-class="{ active: isActive('/jobs')}"><a ng-href="#/jobs">Jobs</a></li>
+              <!--li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li-->
+              <li ng-cloak ng-class="{ active: isActive('/jobs') || isActive('/') }"><a ng-href="#/jobs">Jobs</a></li>
               <li ng-if="isAdmin" ng-cloak ng-class="{ active: isActive('/users')}"><a ng-href="#/users">Users</a></li>
               <li ng-if="!authUser" ng-cloak ng-class="{ active: isActive('/login')}"><a ng-href="#/login">Login</a></li>
               <li ng-if="isAdmin" ng-cloak ng-class="{ active: isActive('/payments')}"><a ng-href="#/payments">Payments</a></li>
@@ -91,7 +91,18 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
+    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -178,6 +189,7 @@
         <script src="scripts/directives/sharejob.js"></script>
         <script src="scripts/services/payment.js"></script>
         <script src="scripts/directives/lldyanmotable.js"></script>
+        <script src="scripts/services/apipath.js"></script>
         <!-- endbuild -->
 </body>
 </html>
