begining of change to new data source: jobs

--- a/app/index.html
+++ b/app/index.html
@@ -190,6 +190,7 @@
         <script src="scripts/services/payment.js"></script>
         <script src="scripts/directives/lldyanmotable.js"></script>
         <script src="scripts/services/apipath.js"></script>
+        <script src="scripts/services/jobs__.js"></script>
         <!-- endbuild -->
 </body>
 </html>
